<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<name>ThreatConnect SDK Parent</name>
	<description>The ThreatConnect Java SDK. Used to communicate with the ThreatConnect API</description>
	<url>https://github.com/ThreatConnect-Inc/threatconnect-java</url>

	<parent>
		<groupId>com.threatconnect</groupId>
		<artifactId>sdk</artifactId>
		<version>2.19.0-SNAPSHOT</version>
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.threatconnect.sdk</groupId>
	<artifactId>threatconnect-sdk</artifactId>
	<packaging>pom</packaging>

	<modules>
		<module>threatconnect-sdk-core</module>
		<module>threatconnect-model</module>
	</modules>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Danny Tineo</name>
			<email>integrations@threatconnect.com</email>
			<organization>ThreatConnect</organization>
			<organizationUrl>https://www.threatconnect.com</organizationUrl>
		</developer>
		<developer>
			<name>Mitchell Turner</name>
			<email>integrations@threatconnect.com</email>
			<organization>ThreatConnect</organization>
			<organizationUrl>https://www.threatconnect.com</organizationUrl>
		</developer>
		<developer>
			<name>Greg Marut</name>
			<email>integrations@threatconnect.com</email>
			<organization>ThreatConnect</organization>
			<organizationUrl>https://www.threatconnect.com</organizationUrl>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/ThreatConnect-Inc/threatconnect-java</url>
		<connection>scm:git:git@github.com:ThreatConnect-Inc/threatconnect-java.git</connection>
		<developerConnection>scm:git:git@github.com:ThreatConnect-Inc/threatconnect-java.git</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<github.global.server>github</github.global.server>

		<main.basedir>${project.basedir}</main.basedir>

		<!-- Dependency Versions -->
		<version.commons-codec>1.9</version.commons-codec>
		<version.commons-io>2.13.0</version.commons-io>
		<version.apache-http>4.4.1</version.apache-http>
		<version.jackson>2.9.10.3</version.jackson>
		<version.reflections>0.9.10</version.reflections>
		<version.jedis>3.9.0</version.jedis>
		<es.version>2.3.4</es.version>
		<version.gson>2.6.2</version.gson>
	</properties>

	<profiles>
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<!--GPG Signing -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<show>public</show>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- sources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>